backspace of otp box fixed and design changed

--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -30,7 +30,7 @@
                                     class="login_wrap widget-taber-content p-30 background-white border-radius-20 mb-md-5 mb-lg-0 mb-sm-5">
                                     <div class="padding_eight_all bg-white">
                                         <div class="heading_s1">
-                                            <h3 class="mb-30">Login</h3>
+                                            <h3 class="mb-30 text-center">Login</h3>
                                         </div>
                                         <form method="post" action="/login" id="loginForm">
                                             <div class="form-group">
@@ -55,7 +55,7 @@
                                                             for="exampleCheckbox1"><span>Remember me</span></label>
                                                     </div>
                                                 </div>
-                                                <a class="text-muted" href="/forgotPassword">Forgot password?</a>
+                                                <a class="text" href="/forgotPassword">Forgot password?</a>
                                             </div>
                                             <div class="form-group text-center">
                                                 <button type="submit"
@@ -81,7 +81,7 @@
                                                 </a>
                                             </li>
                                         </ul>
-                                        <div class="text-muted text-center">Create account? <a href="/Register">Sign
+                                        <div class="text-center"><b>Create account?</b> <a href="/Register">Sign
                                                 up now</a></div>
                                     </div>
                                 </div>
