--- a/views/user/register.ejs
+++ b/views/user/register.ejs
@@ -34,7 +34,7 @@
                             <div class="login_wrap widget-taber-content p-30 background-white border-radius-20">
                                 <div class="padding_eight_all bg-white">
                                     <div class="heading_s1">
-                                        <h3 class="mb-30">Create an Account</h3>
+                                        <h3 class="mb-30 text-center">Create an Account</h3>
                                     </div>
                                     <form id="registerForm" action="/register" method="post" novalidate>
                                         <div class="form-group">
@@ -103,7 +103,7 @@
                                         </li>
                                     </ul>
 
-                                    <div class="text-muted text-center">Already have an account? <a href="/login">Sign
+                                    <div class="text-center">Already have an account? <a href="/login">Sign
                                             in now</a></div>
                                 </div>
                             </div>
