added two pages about and contact

--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -365,8 +365,8 @@
                                         </li>
                                     </ul>
                                 </li>
-                                <li><a href="page-about.html">About</a></li>
-                                <li><a href="#">Contact </a> </li>
+                                <li><a href="/about">About</a></li>
+                                <li><a href="/contact">Contact </a> </li>
 
                             </ul>
                         </nav>
@@ -481,8 +481,7 @@
                 <!-- mobile menu start -->
                 <nav>
                     <ul class="mobile-menu">
-                        <li class="menu-item-has-children"><span class="menu-expand"></span><a
-                                href="/">Home</a> </li>
+                        <li class="menu-item-has-children"><span class="menu-expand"></span><a href="/">Home</a> </li>
 
                         <li class="menu-item-has-children"><span class="menu-expand"></span><a href="/shop">Shop</a>
                             <ul class="dropdown">
@@ -518,8 +517,10 @@
                                 </li>
                             </ul>
                         </li>
-                        <li class="menu-item-has-children"><span class="menu-expand"></span><a href="#">About</a></li>
-                        <li class="menu-item-has-children"><span class="menu-expand"></span><a href="#">Contact</a></li>
+                        <li class="menu-item-has-children"><span class="menu-expand"></span><a href="/about">About</a>
+                        </li>
+                        <li class="menu-item-has-children"><span class="menu-expand"></span><a
+                                href="/contact">Contact</a></li>
                         <!-- <li class="menu-item-has-children"><span class="menu-expand"></span><a href="blog-category-fullwidth.html">Blog</a>
                             <ul class="dropdown">
                                 <li><a href="blog-category-grid.html">Blog Category Grid</a></li>
