--- a/views/user/register.ejs
+++ b/views/user/register.ejs
@@ -24,7 +24,7 @@
                     <div class="row">
                         <!-- Image Column -->
                         <div class="col-lg-6 col-md-6 col-sm-12 d-flex align-items-center justify-content-center">
-                            <img src="/imgs/pages/registerPage.jpg" alt="loginImg" class="img-fluid"
+                            <img src="/imgs/pages/registerPage.png" alt="registerImg" class="img-fluid"
                                 style="max-width: 100%; width: 100%; ">
                         </div>
 
